--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile("org.springframework.boot:spring-boot-starter-web:1.4.2.RELEASE")
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile("org.joda:joda-money:0.12")
+	compile("org.springframework.boot:spring-boot-starter-jdbc")
+	runtime("mysql:mysql-connector-java")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
